--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ollama Chat</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100 min-h-screen flex items-center justify-center px-4">
   <div class="w-full max-w-2xl bg-white shadow-xl rounded-2xl p-6 space-y-4">
     <h1 class="text-2xl font-bold text-center text-gray-800">💬 Ollama Chat</h1>
 
     <div id="chat-box" class="h-96 overflow-y-auto p-4 bg-gray-50 border rounded-lg space-y-3 text-sm">
-      <!-- Chat messages will go here -->
+      <!-- Chat messages will appear here -->
     </div>
 
     <form id="chat-form" class="flex gap-2">
@@ -25,49 +27,66 @@
     const chatForm = document.getElementById('chat-form');
     const userInput = document.getElementById('user-input');
 
-    chatForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const userMessage = userInput.value.trim();
-      if (!userMessage) return;
+  chatForm.addEventListener('submit', async (e) => {
+  e.preventDefault();
 
-      appendMessage('You', userMessage);
-      userInput.value = '';
+  const userMessage = userInput.value.trim();
+  if (!userMessage) return;
 
-      const responseStream = await fetch('http://localhost:11434/api/generate', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          model: 'tinyllama', // Replace with your model name
-          prompt: [{ role: 'user', content: userMessage }],
-          stream: true
-        })
-      });
+  // Show user message
+  appendMessage('You', userMessage);
+  userInput.value = '';
 
-      const reader = responseStream.body.getReader();
-      const decoder = new TextDecoder();
-      let responseText = '';
-      let botMessage = appendMessage('Ollama', '');
+  // Create a loading message
+  const botMessage = appendMessage('Ollama', '...');
+  let responseText = '';
 
-      while (true) {
-        const { value, done } = await reader.read();
-        if (done) break;
-        const chunk = decoder.decode(value, { stream: true });
-        const lines = chunk.trim().split('\n');
-
-        for (let line of lines) {
-          if (line.startsWith('data:')) {
-            const payload = JSON.parse(line.slice(5));
-            if (payload.done) break;
-            if (payload.message?.content) {
-              responseText += payload.message.content;
-              botMessage.innerHTML = `<strong>Ollama:</strong> ${responseText}`;
-              chatBox.scrollTop = chatBox.scrollHeight;
-            }
-          }
-        }
-      }
+  try {
+    const response = await fetch('http://localhost:11434/api/chat', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        model: 'llama3',
+        messages: [
+          { role: 'user', content: userMessage }
+        ],
+        stream: true
+      })
     });
 
+    if (!response.ok) {
+      const err = await response.json();
+      throw new Error(err.error || "API request failed");
+    }
+
+    const reader = response.body.getReader();
+    const decoder = new TextDecoder();
+
+    while (true) {
+      const { value, done } = await reader.read();
+      if (done) break;
+
+      const chunk = decoder.decode(value);
+      const lines = chunk.split('\n').filter(line => line.trim() !== '');
+
+      for (const line of lines) {
+        try {
+          const data = JSON.parse(line);
+          if (data.message?.content) {
+            responseText += data.message.content;
+            botMessage.innerHTML = `<strong>Ollama:</strong> ${responseText}`;
+            chatBox.scrollTop = chatBox.scrollHeight;
+          }
+        } catch (e) {
+          console.error("Error parsing line:", line);
+        }
+      }
+    }
+  } catch (err) {
+    botMessage.innerHTML = `<strong>Ollama:</strong> <span class="text-red-600">Error: ${err.message}</span>`;
+    console.error("Chat error:", err);
+  }
+});
     function appendMessage(sender, text) {
       const message = document.createElement('div');
       message.innerHTML = `<strong>${sender}:</strong> ${text}`;
@@ -77,4 +96,5 @@
     }
   </script>
 </body>
+
 </html>
