--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center text-white">
         <i class="fas fa-robot"></i>
       </div>
-      <h1 class="text-lg font-semibold text-gray-800">Llama Chat</h1>
+      <h1 class="text-lg font-semibold text-gray-800">DSAS Assistant</h1>
     </div>
     <div class="flex items-center space-x-4">
       <button class="text-gray-500 hover:text-gray-700">
@@ -129,6 +129,7 @@
   </div>
 
   <script>
+    const instruction = "ALWAYS ACT AS AN EXPERT IN BUSINESS";
     const chatBox = document.getElementById('chat-box');
     const chatForm = document.getElementById('chat-form');
     const userInput = document.getElementById('user-input');
@@ -163,7 +164,7 @@
           body: JSON.stringify({
             model: 'llama3',
             messages: [
-              { role: 'user', content: userMessage }
+              { role: 'user', content: instruction+userMessage }
             ],
             stream: true
           })
